# amaz-agent-listing

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: copywriting-generation-solution.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: admin.ts  audits.ts  briefs.ts  client.ts  competitors.ts  conversations.ts  copywriting.ts  drafts.ts  health.ts  jobs.ts  rules.ts  types.ts
frontend/src/components/: AppShell.vue  AuditResultPanel.vue  BriefForm.vue  CompetitorAnalysisPanel.vue  CompetitorImportPanel.vue  ConversationPanel.vue  DraftGeneratorPanel.vue  DraftResultPanel.vue  JobStatusPanel.vue  ModelManagementPanel.vue  RecentJobsPanel.vue  RequestStatusBar.vue  RewritePanel.vue  RuleListPanel.vue  StepNav.vue
frontend/src/router/: index.ts
frontend/src/stores/: requestStatus.ts  rules.ts  tasks.ts  workflow.ts
frontend/src/styles/: base.css  components.css  layout.css
frontend/src/utils/: datetime.ts
frontend/src/views/: AdminView.vue  CompetitorAnalysesView.vue  CopywritingView.vue  HealthView.vue  JobsView.vue  RulesView.vue  WorkspaceView.vue
scripts/: init_db.py
src/listing_agent/: main.py
src/listing_agent/api/: router.py
src/listing_agent/core/: config.py  logging.py  observability.py  time.py
src/listing_agent/db/: seeds.py  session.py
src/listing_agent/models/: __init__.py  conversation.py  v1_data.py
src/listing_agent/schemas/: admin.py  audit.py  brief.py  competitor.py  draft.py  (+5 more)
(+24 files in other folders)
