[project]
name = "mult-agent-listing"
version = "0.1.0"
description = "FastAPI backend for the Amazon listing copy Agent V1."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.47.0",
    "pydantic==2.12.3",
    "pydantic-settings>=2.4.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "langchain==1.3.1",
    "langchain-openai==1.2.2",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/listing_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
